crates/component-shape-gpui/tests/ui/incompatible_value.stderr
error[E0277]: GPUI component shape `StringShape` is not compatible with value `u64`
  --> tests/ui/incompatible_value.rs:25:28
   |
25 |     assert_shape_for_u64::<StringShape>();
   |                            ^^^^^^^^^^^ unsatisfied trait bound
   |
   = note: declare `value = u64` or include `u64` in `values(...)`, or choose a component shape whose value type matches the field
help: the trait `GpuiComponentShapeFor<u64>` is not implemented for `StringShape`
      but trait `GpuiComponentShapeFor<std::string::String>` is implemented for it
  --> tests/ui/incompatible_value.rs:11:1
   |
11 | / component_shape! {
12 | |     pub struct StringShape {
   | |__________________________^
   = help: for that trait implementation, expected `std::string::String`, found `u64`
note: required by a bound in `assert_shape_for_u64`
  --> tests/ui/incompatible_value.rs:20:12
   |
18 | fn assert_shape_for_u64<Shape>()
   |    -------------------- required by a bound in this function
19 | where
20 |     Shape: GpuiComponentShapeFor<u64>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_shape_for_u64`
   = note: this error originates in the macro `component_shape` (in Nightly builds, run with -Z macro-backtrace for more info)
